# ado_mcp_python

./: .env.example  .gitignore  README.md  pyproject.toml
ado_mcp_python/: __init__.py  ado_client.py  auth.py  config.py  domains.py  server.py  tls.py  tools_core.py  tools_pipelines.py  tools_repositories.py  tools_work.py  tools_work_items.py  utils.py
scripts/: smoke_test_pat.py
tests/: test_auth_headers.py  test_pipelines_helpers.py  test_repositories_helpers.py  test_work_helpers.py  test_work_items_helpers.py
